Add UI for xrPostprocessEditor.

--- a/src/editors/xrPostprocessEditor/xrPostprocessEditor.csproj
+++ b/src/editors/xrPostprocessEditor/xrPostprocessEditor.csproj
@@ -40,6 +40,7 @@
     <NoWin32Manifest>true</NoWin32Manifest>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Flobbster.Windows.Forms.PropertyGrid, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,18 +51,28 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="xrSdkControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainDialog.cs">
+    <Compile Include="Dialogs\MainDialog.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainDialog.Designer.cs">
+    <Compile Include="Dialogs\MainDialog.Designer.cs">
       <DependentUpon>MainDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\KeyFrameBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Dialogs\KeyFrameBox.Designer.cs">
+      <DependentUpon>KeyFrameBox.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="MainDialog.resx">
+    <EmbeddedResource Include="Dialogs\MainDialog.resx">
       <DependentUpon>MainDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\KeyFrameBox.resx">
+      <DependentUpon>KeyFrameBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -83,6 +94,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
