--- a/src/editors/xrManagedApi/xrManagedApi.vcxproj.filters
+++ b/src/editors/xrManagedApi/xrManagedApi.vcxproj.filters
@@ -1,21 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="wrappers">
-      <UniqueIdentifier>{5701e3e7-534d-4d78-8018-13a0da121c00}</UniqueIdentifier>
+    <Filter Include="core">
+      <UniqueIdentifier>{113a9e8a-dd8b-4994-82d5-a4affedd1911}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="wrappers\Core.hpp">
-      <Filter>wrappers</Filter>
-    </ClInclude>
     <ClInclude Include="Pch.hpp" />
+    <ClInclude Include="core\Core.hpp">
+      <Filter>core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="wrappers\Core.cpp">
-      <Filter>wrappers</Filter>
-    </ClCompile>
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="Pch.cpp" />
+    <ClCompile Include="core\Core.cpp">
+      <Filter>core</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
