--- a/src/editors/xrWeatherEditor/xrWeatherEditor.vcxproj
+++ b/src/editors/xrWeatherEditor/xrWeatherEditor.vcxproj
@@ -220,10 +220,10 @@
     <ClCompile Include="window_weather_editor.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Include\editor\engine.hpp" />
-    <ClInclude Include="..\Include\editor\ide.hpp" />
-    <ClInclude Include="..\Include\editor\interfaces.hpp" />
-    <ClInclude Include="..\Include\editor\property_holder.hpp" />
+    <ClInclude Include="..\..\Include\editor\engine.hpp" />
+    <ClInclude Include="..\..\Include\editor\ide.hpp" />
+    <ClInclude Include="..\..\Include\editor\interfaces.hpp" />
+    <ClInclude Include="..\..\Include\editor\property_holder.hpp" />
     <ClInclude Include="engine_include.hpp" />
     <ClInclude Include="ide_impl.hpp" />
     <ClInclude Include="pch.hpp" />
